fixed hero section buttons - overflow on mobile

--- a/website/frontend/styles/Hero.scss
+++ b/website/frontend/styles/Hero.scss
@@ -370,7 +370,7 @@
 
     .hero-buttons {
       flex-direction: column;
-      // align-items: center;
+      align-items: center;
       width: 100%;
       margin: 0 auto;
     }
